flux/apps/base/istio-system/istio/gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-gateway-access: "true"
