flux/apps/base/istio-system/istio/gateway/istio-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.kubegit.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              istio-gateway-access: "true"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.kubegit.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: authentik-tls-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              istio-gateway-access: "true"
